frontend/static/styles/main.css
@font-face {
	font-family: 'AncientModernTales';
	src: url('../fonts/AncientModernTales.woff2') format('woff2');
}
@font-face {
	font-family: 'SuperLegendBoy';
	src: url('../fonts/SuperLegendBoy.woff2') format('woff2');
}
::selection {
	background: #eee;
	color: #2C2C2C;
}
html, body {
	margin: 0;
	padding: 0;
	background-color: #2C2C2C;
	color: #eee;
	font-size: 16px;
	-webkit-font-smoothing: auto;
}
#wrapper {
	margin: 0 auto;
}
.h1 {
	margin: 0 auto;
	display: block;
	width: max-content;
}
h1 {
	font-family: 'AncientModernTales', Arial, Helvetica, sans-serif;
	font-size: 8rem;
	letter-spacing: 1px;
	text-align: left;
	padding: 0;
	margin: 0;
	display: block;
	white-space: pre;
}
#searchBar {
	margin: 0 auto;
	display: block;
	width: 700px;
}
#searchBar form {
	text-align: center;
	display: flex;
	flex-flow: column nowrap;
}
.searchBar {
	margin-top: 30px;
	overflow: hidden;
	padding: 1rem 0.75rem;
	background-color: #eee;
	border: solid 2px #2C2C2C;
  transition: all linear .1s;
}
.searchBar input {
	width: 100%;
	height: 100%;
	font-family: Consolas, Courier, monospace;
	font-weight: 700;
	letter-spacing: 1px;
	font-size: 1.5rem;
	background-color: inherit;
	caret-color: currentColor;
	color: #2C2C2C;
	border: none;
	outline: none;
}
.searchBar input::selection {
	color: #eee;
	background: #2C2C2C;
}
.searchBar:hover,
.searchBar:focus,
.searchBar:focus-within {
	border: solid 2px red;
}
#searchBar .btn {
	font-family: 'SuperLegendBoy', 'Courier New', Courier, monospace;
	overflow: hidden;
	color: #eee;
	position: relative;
	background-color: rgba(0,0,0,0.1);
	border: solid 2px #2C2C2C;
	width: 300px;
	margin: 0 auto;
	margin-top: 20px;
}
#searchBar .btn:focus-within,
#searchBar .btn:hover,
#searchBar .btn:focus {
	border: solid 2px red;
}
.btn input {
	font-family: inherit;
	padding: 0.75rem 1rem;
	color: inherit;
	border: none;
	width: 100%;
	height: 100%;
	background-color: inherit;
	text-align: left;
	text-indent: 80px;
}
.btn::before {
	content: '>';
	color: currentColor;
	font-family: inherit;
	font-size: inherit;
	position: absolute;
	transition: linear 0.2s;
	top: 50%;
	transform: translateY(-50%);
	left: -10px;
}
.btn:hover::before,
.btn:focus-within::before {
	left: 75px;
}
.checks {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  margin-top: 20px;
}
.chk {
  font-family: 'SuperLegendBoy', 'Courier New', Courier, monospace;
  font-size: 0.8rem;
  box-sizing: border-box;
  margin: 0px 10px 10px 0px;
  padding: 0.5rem 0.75rem;
  background-color: rgba(0,0,0,0.3);
  border: solid 2px #2C2C2C;
  position: relative;
  transition: all linear .1s;
}
.chk:focus,
.chk:hover,
.chk:focus-within {
  border: solid 2px red;
}
.chk::selection {
  background: transparent;
  color: #eee;
}
.chk span {
  display: inline-block;
  background-color: #eee;
  width: 10px;
  height: 10px;
  margin-left: 0.75rem;
  z-index: 1;
  transition: all linear 0.1s;
}
.chk input {
  opacity: 0;
  position: absolute;
}
.chk input:checked + span {
  background-color: red;
}
#main {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  max-width: 2500px;
  overflow: hidden;
  box-sizing: border-box;
  justify-content: space-evenly;
  margin: 0 auto;
}
#resultsWrapper {
  min-width: 800px;
  box-sizing: border-box;
  padding: 10px;
}
.result {
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 20px;
  background-color: rgba(0,0,0,0.1);
  padding: 10px;
}
.result td {
  background-color: black;
}
.result .thumb {
  width: 150px;
  height: 150px;
  display: inline-block;
}
.thumb img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  background-color:rgba(0,0,0,0.1);
}
aside {
  background-color: blue;
  overflow: hidden;
  min-width: 250px;
  box-sizing: border-box;
  width: 20%;
}
canvas {
  width: 100%;
  height: 100%;
}
.pages {
}

